    as "Optimisation Margin" option.
  - auto goto task: when no task is defined then on takeoff, if there is a waypoint
    within 1km of the takeoff location, a goto task pointing back to this location
    is automatically created.
* infoboxes
  - new graphical infoboxes
    - barogram
    - vario trace
    - netto vario trace
    - thermal circling trace
    - thermal band
    - task progress
  - new infobox displays time below maximum task start height
* Android
  - support landscape/portrait switching
* Dialog updates
  - Analysis dialog shows multiple contest (OLC etc) results
  - Analysis dialog includes a thermal band graph
  - Waypoint select dialog allows filtering by start/finish
  - Airspace warning dialog only shows buttons suitable for the respective airspace item, 

Version 6.0.9 - not yet released
* devices
  - work around iPaq Bluetooth driver bug
* map
  - fix for hanging map on slow hardware
* Windows
  - fix setting the system time from GPS

Version 6.0.8 - 2011/03/23
* don't estimate thermal source for skewed thermals
* devices
  - CAI302: fix task declaration on Android
  - EW microRecorder: minor task declaration fix
* configuration
  - Units: fix "feet per minute" support
  - save the "Auto Logger" setting
* Windows
  - use backslash for paths on Windows CE
* Android
  - calculate WGS84 to real altitude (internal GPS)
  - fix incorrect airspace warning repetitions
  - auto-reconnect to Bluetooth GPS after timeout
  - support the acceleration sensor
* Linux
  - more dialog improvements
  - fix bold font rendering
  - case insensitive file name matching

Version 6.0.7 - 2011/03/12
* devices
  - EW microRecorder: timeout during connect
  - EW microRecorder: increase RX timeout
  - EW microRecorder: insert new declaration into old EW-USER.TXT
* map
  - Airspace: support alternative OpenAir coordinate format
  - allow zooming in to 1 km
* replay: don't execute recorded input events
* Windows
  - hide the task bar on Windows CE Core
* Android